if else,switch done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="./js/index.js"></script> -->
     <!-- <script src="./js/datatype.js"></script> -->
     <!-- <script src="./js/operator.js"></script> -->
-    <script src="js/if else.js"></script>
+    <!-- <script src="js/if else.js"></script> -->
+    <script src="js/switch.js"></script>
 </body>
 </html>
