--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- <script src="./js/datatype.js"></script> -->
     <!-- <script src="./js/operator.js"></script> -->
     <!-- <script src="js/if else.js"></script> -->
-    <script src="js/switch.js"></script>
+    <!-- <script src="js/string-class.js"></script> -->
+    <!-- <script src="js/switch.js"></script> -->
+    <script src="js/alert-m.js"></script>
+    <!-- <script src="js/loop.js"></script> -->
 </body>
 </html>
