types & string manipulation com

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <!-- <script src="js/if else.js"></script> -->
     <!-- <script src="js/string-class.js"></script> -->
     <!-- <script src="js/switch.js"></script> -->
-    <script src="js/alert-m.js"></script>
+    <!-- <script src="./js/alert-prompt-confirm.js"></script> -->
     <!-- <script src="js/loop.js"></script> -->
+    <!-- <script src="js/type-conversion.js"></script> -->
+
+    <script src="./js/string manipulation.js"></script>
 </body>
 </html>
