Array & Function-half complete

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- <script src="./js/alert-prompt-confirm.js"></script> -->
     <!-- <script src="js/loop.js"></script> -->
     <!-- <script src="js/type-conversion.js"></script> -->
-
-    <script src="./js/string manipulation.js"></script>
+    <!-- <script src="./js/string manipulation.js"></script> -->
+    <!-- <script src="js/array.js"></script> -->
+    <script src="js/function.js"></script>
 </body>
 </html>
