--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- <script src="js/type-conversion.js"></script> -->
     <!-- <script src="./js/string manipulation.js"></script> -->
     <!-- <script src="js/array.js"></script> -->
-    <script src="js/function.js"></script>
+    <!-- <script src="js/function.js"></script> -->
+    <script src="js/object.js"></script>
 </body>
 </html>
