--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- <script src="./js/string manipulation.js"></script> -->
     <!-- <script src="js/array.js"></script> -->
     <!-- <script src="js/function.js"></script> -->
-    <script src="js/object.js"></script>
+    <script src="js/hoisting.js"></script>
+    <!-- <script src="js/object.js"></script> -->
 </body>
 </html>
