--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <!-- <script src="./js/string manipulation.js"></script> -->
     <!-- <script src="js/array.js"></script> -->
     <!-- <script src="js/function.js"></script> -->
-    <script src="js/hoisting.js"></script>
+    <!-- <script src="js/hoisting.js"></script> -->
     <!-- <script src="js/object.js"></script> -->
+    <script src="js/the bom.js"></script>
 </body>
 </html>
