--- a/the-bom.html
+++ b/the-bom.html
@@ -12,8 +12,9 @@
     <button id="btn1">close</button>
 
 
+    <!-- redirecy btn -->
 
-
+    <button id="btn-redirect" onclick="redirect()">Redirect To Google</button>
 
 
 
